--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     <div class="container-1">
         <div class="box">
             <img class="box-1" src="./images/black-limousine.jpg">
-            <h3>Airport Service</h3>
+            <h3>Airport Services</h3>
         </div>
         <div class="box">
             <img class="box-2" src="./images/AdobeStock_17906490_Preview.jpeg">
-            <h3>Bachlorette Party</h3>
+            <h3>Bachelorette Party</h3>
         </div>
         <div class="box">
             <img class="box-3"
@@ -62,7 +62,7 @@
         </div>
         <div class="box">
             <img class="box-4" src="./images//white-formal-gloved-uniformed-hand-opening-car-door.jpg">
-            <h3>Casual</h3>
+            <h3>Graduation</h3>
         </div>
         <div class="box">
             <img class="box-5"
